--- a/frontend/relayer.html
+++ b/frontend/relayer.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Relayer</a>
+          <a class="navbar-brand" href="#"><img alt="Brand" src="logo_sans_fond.png" height="180%"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
