modification de la page 'a propos'

--- a/frontend/about_cover.html
+++ b/frontend/about_cover.html
@@ -55,7 +55,34 @@
             </div>
           </div>
 
-          
+
+          <div class="row">
+            <h2>Comment ca marche ?</h2>
+            <h4>Une alternative intelligente aux relais colis</h4>
+            <p>La livraison d'une commande via un site de e-commerce peut s'avérer souvent difficile notamment en raison des horaires de livraison.
+              Dans de nombreux cas, vos horaires ne correspondent pas aux horaires de livraison ou à ceux des relais colis (en général
+              ouverts de 9h à 19h).</p>
+            <h4>La solution</h4>
+            <p>Relayer parie sur la communauté de voisins, aux horaires bien plus flexibles, qui sont prêts à recevoir vos colis contre rémunération !</p>
+          </div>
+
+          <div class="row">
+            <h2>Concrètement</h2>
+            <h4>Une solution implémentée directement sur nos sites de e-commerces partenaires</h4>
+          </div>
+
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
