integrated server/database connexion

--- a/frontend/inscription.html
+++ b/frontend/inscription.html
@@ -54,7 +54,7 @@
             </div>
           </div>
 
-          <form class="form-horizontal col-lg-12">
+          <form action="/users" method="POST" class="form-horizontal col-lg-12">
           <fieldset>
 
           <!-- Form Name -->
@@ -130,7 +130,7 @@
           <div class="form-group">
             <label class="col-md-4 control-label sr-only" for="envoyer">S'inscrire</label>
             <div class="col-md-4">
-              <a href="relayer_cover.html" class="btn btn-primary btn-success center-block">S'inscrire <span class="glyphicon glyphicon-ok"></span></a>
+              <button a href="relayer_cover.html" type="submit" class="btn btn-primary btn-success center-block">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
             </div>
           </div>
 
