--- a/frontend/about_cover.html
+++ b/frontend/about_cover.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="logo_sans_fond.png">
+    <link rel="icon" href="imgs/logo_sans_fond.png">
 
     <title>Relayer</title>
 
@@ -44,7 +44,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><img class="imagehaut" src="logo_sans_fond.png" alt="logo" width="40%"></h3>
+              <h3 class="masthead-brand"><img class="imagehaut" src="imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="relayer_cover.html">Accueil</a></li>
