--- a/frontend/contact_cover.html
+++ b/frontend/contact_cover.html
@@ -47,7 +47,7 @@
               <h3 class="masthead-brand"><img class="imagehaut" src="imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="relayer_cover.html">Accueil</a></li>
+                  <li><a href="index.html">Accueil</a></li>
                   <li><a href="about_cover.html">À propos</a></li>
                   <li class="active"><a href="#">Contact</a></li>
                 </ul>
