les pages html sont mtn dans le dossier public, la page index (accueil) a été modifiée et il faut reprendre les pages a propos et contact

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,29 +7,28 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="imgs/logo_sans_fond.png">
+    <link rel="icon" href="../imgs/logo_sans_fond.png">
 
     <title>Relayer</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/docs/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/docs/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="../cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="bootstrap/docs/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="../bootstrap/docs/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 
   </head>
 
@@ -44,33 +43,25 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><img class="imagehaut" src="imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
+              <h3 class="masthead-brand"><img class="imagehaut" src="../imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="index.html">Accueil</a></li>
-                  <li class="active"><a href="#">À propos</a></li>
+                  <li class="active"><a href="#">Accueil</a></li>
+                  <li><a href="about_cover.html">À propos</a></li>
                   <li><a href="contact_cover.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
-
-          <div class="row">
-            <h2>Comment ca marche ?</h2>
-            <h4>Une alternative intelligente aux relais colis</h4>
-            <p>La livraison d'une commande via un site de e-commerce peut s'avérer souvent difficile notamment en raison des horaires de livraison.
-              Dans de nombreux cas, vos horaires ne correspondent pas aux horaires de livraison ou à ceux des relais colis (en général
-              ouverts de 9h à 19h).</p>
-            <h4>La solution</h4>
-            <p>Relayer parie sur la communauté de voisins, aux horaires bien plus flexibles, qui sont prêts à recevoir vos colis contre rémunération !</p>
+          <div class="inner cover">
+            <h1 class="cover-heading">Fatigués des relais colis? <br>Des avis de passage?</h1>
+            <p class="lead">Faites vous livrer chez votre voisin</p><br><br>
+            <h2 class="cover-heading">Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
+            <p class="lead">
+              <a href="inscription.html" class="btn btn-lg btn-default">Devenir Relayer</a>
+            </p>
           </div>
-
-          <div class="row">
-            <h2>Concrètement</h2>
-            <h4>Une solution implémentée directement sur nos sites de e-commerces partenaires</h4>
-          </div>
-
 
           <div class="mastfoot">
             <div class="inner">
@@ -89,8 +80,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="bootstrap/docs/dist/js/bootstrap.min.js"></script>
+    <script src="../bootstrap/docs/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
