--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -7,22 +7,22 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="imgs/logo_sans_fond.png">
+    <link rel="icon" href="../imgs/logo_sans_fond.png">
 
     <title>Relayer</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/docs/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/docs/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../bootstrap/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="../cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="bootstrap/docs/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="../bootstrap/docs/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,7 +43,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><img src="imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
+              <h3 class="masthead-brand"><img src="../imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Accueil</a></li>
@@ -130,7 +130,7 @@
           <div class="form-group">
             <label class="col-md-4 control-label sr-only" for="envoyer">S'inscrire</label>
             <div class="col-md-4">
-              <button a href="index.html" type="submit" class="btn btn-primary btn-success center-block">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
+              <button a href="index.html" type="submit" class="btn btn-primary btn-success center-block" data-toggle="modal" data-target="#myModal">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
             </div>
           </div>
 
@@ -154,8 +154,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="bootstrap/docs/dist/js/bootstrap.min.js"></script>
+    <script src="../bootstrap/docs/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
