--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,13 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="relayers.css" rel="stylesheet">
 
-  <style>
-  body {
-    position: relative;
-  }
-  #section2 {padding-top:50px;height:800px;color: #000; background-color: #fff;}
-  .section3 {padding-top:50px;height:600px;color: #fff; background-color: #444;}
-  </style>
+
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -24,7 +18,7 @@
     <div class="site-wrapper-inner">
 
       <div class="cover-container section1">
-        <div class="masthead clearfix">
+        <div class="masthead clearfix navbar-fixed-top">
           <div class="inner">
             <h3 class="masthead-brand"><img src="../imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
             <nav>
@@ -38,7 +32,7 @@
         </div>
 
         <div class="inner cover">
-          <h1 class="cover-heading">Fatigués des relais colis? <br>Des avis de passage?</h1>
+          <h1 class="cover-heading call-to-action">Fatigués des relais colis? <br>Des avis de passage?</h1>
           <p class="lead">Faites vous livrer chez votre voisin</p><br><br>
           <h2 class="cover-heading">Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
           <p class="lead">
@@ -53,7 +47,7 @@
 
 
 
-  <div class="section2 container">
+  <div class="section2 container" id="section2">
     <div class="row">
       <h1 style="color:#DB6562;">Comment ca marche ?</h1>
       <hr>
@@ -62,77 +56,88 @@
         <p>La livraison d'une commande via un site de e-commerce peut s'avérer souvent difficile notamment en raison des horaires de livraison.
           Dans de nombreux cas, vos horaires ne correspondent pas aux horaires de livraison ou à ceux des relais colis (en général
           ouverts de 9h à 19h).</p>
+        </div>
+        <div class="col-lg-4">
+          <h2>La solution</h2>
+          <p>Relayer parie sur la communauté de voisins, aux horaires bien plus flexibles, qui sont prêts à recevoir vos colis contre rémunération !</p>
+        </div>
+        <div class="col-lg-4">
+          <h2>Concrètement</h2>
+          <p>Une solution implémentée directement sur nos sites de e-commerces partenaires</p>
+        </div>
       </div>
-      <div class="col-lg-4">
-        <h2>La solution</h2>
-        <p>Relayer parie sur la communauté de voisins, aux horaires bien plus flexibles, qui sont prêts à recevoir vos colis contre rémunération !</p>
-      </div>
-      <div class="col-lg-4">
-        <h2>Concrètement</h2>
-        <p>Une solution implémentée directement sur nos sites de e-commerces partenaires</p>
+      <div class="row">
+        <img src="../imgs/fake_relayers.png" class="img-responsive img-thumbnail"alt="fake" width="30%">
       </div>
     </div>
-    <div class="row">
-      <img src="../imgs/fake_relayers.png" class="img-responsive img-thumbnail"alt="fake" width="30%">
-    </div>
-  </div>
 
-  <div class="container-fluid section3">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:700|Patua+One|Roboto+Condensed:700" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <section id="contact" class="content-section text-center">
-            <div class="contact-section">
-                <div class="container">
-                  <h2>Contactez nous!</h2>
-                  <p>N'hésitez pas à nous contacter directement à l'adresse <a href="mailto:contact.relayer@gmail.com" style="text-decoration:underline;">contact.relayer@gmail.com</a> ou en remplissant le contact form ci-dessus</p>
-                  <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                      <form class="form-horizontal">
-                        <div class="form-group">
-                          <label for="exampleInputName2">Nom</label>
-                          <input type="text" class="form-control" id="exampleInputName2" placeholder="Emmanuel Vacher">
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputEmail2">Email</label>
-                          <input type="email" class="form-control" id="exampleInputEmail2" placeholder="emmanuel.vacher@gmail.com">
-                        </div>
-                        <div class="form-group ">
-                          <label for="exampleInputText">Votre message</label>
-                         <textarea  class="form-control" placeholder="Description"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-default">Envoyer</button>
-                      </form>
-
-                      <hr>
-                        <h3>Our Social Sites</h3>
-                      <ul class="list-inline banner-social-buttons">
-                        <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter"> <span class="network-name">Twitter</span></i></a></li>
-                        <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a></li>
-                        <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-youtube-play"> <span class="network-name">Youtube</span></i></a></li>
-                      </ul>
-                    </div>
+    <div class="container-fluid section3" id="section3">
+      <link href="https://fonts.googleapis.com/css?family=Oswald:700|Patua+One|Roboto+Condensed:700" rel="stylesheet">
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <section id="contact" class="content-section text-center">
+        <div class="contact-section">
+          <div class="container">
+            <h2>Contactez nous!</h2>
+            <p>N'hésitez pas à nous contacter directement à l'adresse <a href="mailto:contact.relayer@gmail.com" style="text-decoration:underline;">contact.relayer@gmail.com</a> ou en remplissant le contact form ci-dessus</p>
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2">
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <label for="exampleInputName2">Nom</label>
+                    <input type="text" class="form-control" id="exampleInputName2" placeholder="Emmanuel Vacher">
                   </div>
-                </div>
+                  <div class="form-group">
+                    <label for="exampleInputEmail2">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="emmanuel.vacher@gmail.com">
+                  </div>
+                  <div class="form-group ">
+                    <label for="exampleInputText">Votre message</label>
+                    <textarea  class="form-control" placeholder="Description"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-default">Envoyer</button>
+                </form>
+
+                <hr>
+                <h3>Our Social Sites</h3>
+                <ul class="list-inline banner-social-buttons">
+                  <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter"> <span class="network-name">Twitter</span></i></a></li>
+                  <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a></li>
+                </ul>
+              </div>
             </div>
-          </section>
-  </div>
-
-
-  <div class="mastfoot">
-    <div class="inner">
-      <p>@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
+          </div>
+        </div>
+      </section>
     </div>
-  </div>
 
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-  <script src="section3bootstrap/docs/dist/js/bootstrap.min.js"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="section3bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
 
-</body>
 
-</html>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="section3bootstrap/docs/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="section3bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+
+    <script>
+    $('a[href^="#"]').click(function(){
+      var the_id = $(this).attr("href");
+
+      $('html, body').animate({
+        scrollTop:$(the_id).offset().top
+      }, 'slow');
+      return false;
+    });
+    </script>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted text-center" style="padding:20px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
+      </div>
+    </footer>
+  </body>
+
+  </html>
