--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -7,27 +7,38 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="relayers.css" rel="stylesheet">
+  <link href="style_inscription.css" rel="stylesheet">
   <title>Inscription</title>
 </head>
 
 
 <body>
 
-  <div class="masthead clearfix">
-    <div class="inner">
-      <h3 class="masthead-brand"><img src="../imgs/logo_sans_fond.png" alt="logo" width="40%"></h3>
-      <nav>
-        <ul class="nav masthead-nav">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Relayers</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="about_cover.html">À propos</a></li>
-          <li><a href="contact_cover.html">Contact</a></li>
+          <li><a href="index.html#section2">À propos</a></li>
+          <li><a href="index.html#section3">Contact</a></li>
         </ul>
-      </nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Inscription</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </nav>
 
-  <div class="container-fluid" style="margin-left: auto; margin-right: auto;">
+  <div class="container-fluid" style="margin-top:100px;">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <form action="/users" method="POST" class="form-horizontal">
@@ -58,14 +69,14 @@
             <!-- Text input-->
             <div class="form-group">
               <div class="col-md-4 col-md-offset-4">
-                <input id="mail" name="mail" type="text" placeholder="adresse email" class="form-control input-md" required="">
+                <input id="mail" name="mail" type="text" placeholder="Adresse email" class="form-control input-md" required="">
               </div>
             </div>
 
             <!-- Password input-->
             <div class="form-group">
               <div class="col-md-4 col-md-offset-4">
-                <input id="password" name="password" type="password" placeholder="mot de passe" class="form-control input-md" required="">
+                <input id="password" name="password" type="password" placeholder="Mot de passe" class="form-control input-md" required="">
               </div>
             </div>
 
@@ -110,7 +121,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="text-muted text-center" style="padding:20px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
+    <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
   </div>
 </footer>
 </body>
