Supression CGV dans le footer

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -153,7 +153,7 @@
 
     <footer class="footer">
       <div class="col-md-12">
-        <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
+        <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
       </div>
     </footer>
   </body>
