--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -121,7 +121,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU / CGV</p>
+    <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
   </div>
 </footer>
 </body>
