--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -96,21 +96,15 @@
         <div class="contact-section">
           <div class="container">
             <h2>Contactez nous!</h2>
-            <p>N'hésitez pas à nous contacter directement à l'adresse <a href="mailto:contact.relayer@gmail.com" style="text-decoration:underline;">contact.relayer@gmail.com</a> ou en remplissant le contact form ci-dessus</p>
+            <p>N'hésitez pas à nous contacter directement en remplissant le formulaire ci-dessus</p>
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <form class="form-horizontal">
+                <form class="form-horizontal" action="mailto:contact@relayers.fr" method="post">
                   <div class="form-group">
-                    <label for="exampleInputName2">Nom</label>
-                    <input type="text" class="form-control" id="exampleInputName2" placeholder="Emmanuel Vacher">
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputEmail2">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="emmanuel.vacher@gmail.com">
+                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Adresse email">
                   </div>
                   <div class="form-group ">
-                    <label for="exampleInputText">Votre message</label>
-                    <textarea  class="form-control" placeholder="Description"></textarea>
+                    <textarea  class="form-control" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
                   </div>
                   <button type="submit" class="btn btn-default">Envoyer</button>
                 </form>
