--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="style_index.css" rel="stylesheet">
-
+  <script src="../javascript/contact.js"></script>
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -99,12 +99,12 @@
             <p>N'hésitez pas à nous contacter directement en remplissant le formulaire ci-dessus</p>
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <form class="form-horizontal" action="mailto:contact@relayers.fr" method="post">
+                <form class="form-horizontal" action="" onsubmit="return verifForm(this)">
                   <div class="form-group">
-                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Adresse email">
+                    <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Adresse email " onblur="verifMail(this)">
                   </div>
-                  <div class="form-group ">
-                    <textarea  class="form-control" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
+                  <div class="form-group">
+                    <textarea class="form-control" id="msg" placeholder="Votre message" style="resize:none;" rows="5" onblur="verifMsg(this)"></textarea>
                   </div>
                   <button type="submit" class="btn btn-default">Envoyer</button>
                 </form>
