--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -77,24 +77,30 @@
     </div>
 
     <div class="container-fluid section3" id="section3">
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2>Contactez nous!</h2>
-        <p class="lead">N'hésitez pas à nous contacter directement en remplissant le formulaire ci-dessous</p>
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+          <h2>Contactez nous!</h2>
+          <p class="lead">N'hésitez pas à nous contacter directement en remplissant le formulaire ci-dessous</p>
+        </div>
       </div>
-      <div class="col-lg-8 col-lg-offset-2">
-        <form class="form-horizontal">
-          <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Adresse email">
-          </div>
-          <div class="form-group ">
-            <textarea  class="form-control" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
-          </div>
-          <button class="btn btn-default block-center">Envoyer</button>
-        </form>
-        <hr>
+      <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Adresse email">
+            </div>
+            <div class="form-group ">
+              <textarea  class="form-control" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
+            </div>
+            <button class="btn btn-default center-block">Envoyer</button>
+            <hr>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
           <h3>Suivez-nous sur les réseaux sociaux !</h3>
-          <ul class="list-inline banner-social-buttons">
+          <ul class="list-inline">
             <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter"> <span class="network-name">Twitter</span></i></a></li>
             <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a></li>
           </ul>
