--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -88,12 +88,12 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <form class="form-horizontal" action="" onsubmit="return verifForm(this)">
+          <form class="form-horizontal" action="/contact:1337" method="POST" onsubmit="return verifForm(this)">
             <div class="form-group">
-              <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Adresse email" onblur="verifMail(this)">
+              <input type="text" class="form-control" id="exampleInputEmail2" name="sender" placeholder="Adresse email" onblur="verifMail(this)">
             </div>
             <div class="form-group ">
-              <textarea  class="form-control" id="msg" placeholder="Votre message" style="resize:none;" rows="5" onblur="verifMsg(this)"></textarea>
+              <textarea  class="form-control" id="msg" name="msg" placeholder="Votre message" style="resize:none;" rows="5" onblur="verifMsg(this)"></textarea>
             </div>
             <button type="submit" class="btn btn-default center-block">Envoyer</button>
             <hr>
