--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,7 +40,10 @@
     </div>
   </nav>
 
-  <div class="container-fluid section1" id="section1">
+
+
+
+  <div class="container-fluid" id="section1">
     <div class="col-lg-12" style="margin-top:100px">
       <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
       <p class="lead">Faites vous livrer chez votre voisin</p>
@@ -53,7 +56,7 @@
     </div>
   </div>
 
-  <div class="container-fluid section2" id="section2">
+  <div class="container-fluid" id="section2">
     <div class="row">
       <h1 style="color:#DB6562;">Comment ca marche ?</h1>
       <hr>
@@ -72,14 +75,12 @@
           <p>Une solution implémentée directement sur nos sites de e-commerces partenaires</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 col-lg-offset-4">
-          <img src="../imgs/fake_relayers.png" class="img-responsive img-thumbnail"alt="fake" width="auto">
-        </div>
+      <div class="col-lg-4 col-lg-offset-4">
+        <img src="../imgs/fake_relayers.png" class="img-responsive img-thumbnail"alt="fake" width="auto">
       </div>
     </div>
 
-    <div class="container-fluid section3" id="section3">
+    <div class="container-fluid" id="section3">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2>Contactez nous!</h2>
