--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="style_index.css" rel="stylesheet">
+  <link href="login.css" rel="stylesheet">
   <script src="../javascript/contact.js">
 
   </script>
@@ -34,7 +35,39 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="inscription.html"><span class="glyphicon glyphicon-user"></span> Inscription</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Connexion</b> <span class="caret"></span></a>
+            <ul id="login-dp" class="dropdown-menu">
+              <li>
+                <div class="row">
+                  <div class="col-md-12">
+                    <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                        <label class="sr-only" for="exampleInputEmail2">Adresse Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Adresse Email" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="exampleInputPassword2">Mot de passe</label>
+                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Mot de passe" required>
+                        <div class="help-block text-right"><a href="">Mot de passe oublié ?</a></div>
+                      </div>
+                      <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
+                      </div>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Rester connecter
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    New here ? <a href="#"><b>Join Us</b></a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
