--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -52,7 +52,7 @@
                         <div class="help-block text-right"><a href="">Mot de passe oublié ?</a></div>
                       </div>
                       <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
+                        <button type="submit" class="btn btn-default btn-block">Se connecter</button>
                       </div>
                       <div class="checkbox">
                         <label>
@@ -77,14 +77,14 @@
 
 
   <div class="container-fluid" id="section1">
-    <div class="col-lg-12" style="margin-top:100px">
+    <div class="col-lg-12" style="margin-top:10%">
       <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
       <p class="lead">Faites vous livrer chez votre voisin</p>
     </div>
-    <div class="col-lg-12" style="margin-bottom:100px">
+    <div class="col-lg-12" style="margin-bottom:200px">
       <h2>Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
       <p class="lead">
-        <a href="inscription.html" class="btn btn-lg btn-default">Devenir Relayer</a>
+        <a href="inscription.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-edit"></span> Devenir Relayer </a>
       </p>
     </div>
   </div>
