--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -74,8 +74,6 @@
   </nav>
 
 
-
-
   <div class="container-fluid" id="section1">
     <div class="col-lg-12" style="margin-top:10%">
       <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
@@ -113,7 +111,11 @@
       </div>
     </div>
 
-    <div class="container-fluid" id="section3">
+    <div hidden class="container-fluid" id="section3">
+      <div class="col-lg-6 col-lg-offset-3 alert alert-success text-center">
+        <a href="#" class="close" data-dismiss="alert">&times;</a>
+        <strong>Votre message a bien été envoyé!</strong> Nous vous recontacterons au plus vite :)
+      </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2>Contactez nous!</h2>
