--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <div class="container-fluid" id="section3">
-      <div hidden class="col-lg-6 col-lg-offset-3 alert alert-success text-center">
+      <div hidden id="alert_success" class="col-lg-6 col-lg-offset-3 alert alert-success text-center">
         <a href="#" class="close" data-dismiss="alert">&times;</a>
         <strong>Votre message a bien été envoyé!</strong> Nous vous recontacterons au plus vite :)
       </div>
