ajout du logo- version1

--- a/frontend/public/espace_client.html
+++ b/frontend/public/espace_client.html
@@ -4,6 +4,7 @@
   <title>Relayers - Espace client</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="../imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -34,7 +35,7 @@
           <li><a href="#section3">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li style="margin-top:15px; margin-right:20px; color:#B2605B"><span class="glyphicon glyphicon-user"></span> Connecté</a></li>
+          <li style="margin-top:15px; margin-right:20px;"><span class="glyphicon glyphicon-user"></span> Connecté</a></li>
         </ul>
       </div>
     </div>
