modif logo et footer

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://relayers.fr"><img src="../imgs/logo.png" size="10%" alt="Relayers">
+        <a class="navbar-brand" href="https://relayers.fr"><img src="../imgs/logo.png" alt="Relayers">
         </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
