--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,9 +10,23 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="style_index.css" rel="stylesheet">
   <link href="navbar.css" rel="stylesheet">
-  <script src="../javascript/contact.js">
-
-  </script>
+  <script src="../javascript/contact.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <script type="text/javascript" src="../javascript/google_localisation_inscription.js"></script>
+  <style>
+  /* Always set the map height explicitly to define the size of the div
+  * element that contains the map. */
+  #map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  </style>
+  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 </head>
 
 
@@ -77,15 +91,74 @@
 
 
   <div class="container-fluid" id="section1">
-    <div class="col-lg-12" style="margin-top:10%">
+    <div class="container" style="padding:50px;">
       <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
       <p class="lead">Faites vous livrer chez votre voisin</p>
-    </div>
-    <div class="col-lg-12" style="margin-bottom:200px">
-      <h2>Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
-      <p class="lead">
-        <a href="inscription.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-edit"></span> Devenir Relayer </a>
-      </p>
+      <h2 style="margin-top:150px;">Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
+      <div class="dropup">
+        <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Devenir Relayer<span class="glyphicon glyphicon-edit"></span></button>
+        <ul class="dropdown-menu">
+          <li><form action="/users" method="POST" class="form-horizontal">
+            <fieldset>
+
+              <!-- Form Name -->
+              <legend class="text-center">Inscription</legend>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-1">
+                  <input id="prenom" name="prenom" type="text" placeholder="Prénom" class="form-control input-md" required="">
+                </div>
+              </div>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-1">
+                  <input id="nom" name="nom" type="text" placeholder="Nom" class="form-control input-md" required="">
+                </div>
+              </div>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-1">
+                  <input id="mail" name="mail" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                </div>
+              </div>
+
+              <!-- Password input-->
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-1">
+                  <input id="password" name="password" type="password" placeholder="Mot de passe" class="form-control input-md" required="">
+                </div>
+              </div>
+
+              <!-- Password input-->
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-1">
+                  <input id="password" name="password" type="password" placeholder="Confirmez le mot de passe" class="form-control input-md" required="">
+                </div>
+              </div>
+
+              <!-- Text input-->
+              <div class="form-group" id="locationField">
+                <div class="col-md-10 col-md-offset-1">
+                  <input id="autocomplete" name="address" type="text" placeholder="Adresse" class="form-control input-md" required="" onFocus="geolocate()">
+                </div>
+              </div>
+
+              <!-- Button -->
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-1">
+                  <button a href="index.html" type="submit" class="btn btn-primary btn-success center-block" data-toggle="modal" data-target="#myModal">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
+                </div>
+              </div>
+
+            </fieldset>
+          </form></li>
+
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 
@@ -175,7 +248,8 @@
     });
     </script>
 
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWLLyzwuKDu1Ys2az4cjGlm31gUN-2rDY&libraries=places&callback=initAutocomplete"
+    async defer></script>
   </body>
 
   </html>
