--- a/frontend/public/inscription.html
+++ b/frontend/public/inscription.html
@@ -11,9 +11,7 @@
   <link href="style_inscription.css" rel="stylesheet">
   <link href="navbar.css" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-  <script type="text/javascript" src="../javascript/google_localisation_inscription.js">
-
-  </script>
+  <script type="text/javascript" src="../javascript/google_localisation_inscription.js"></script>
   <title>Inscription</title>
 
   <style>
@@ -169,7 +167,7 @@
   <footer class="footer">
       <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
   </footer>
-  
+
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWLLyzwuKDu1Ys2az4cjGlm31gUN-2rDY&libraries=places&callback=initAutocomplete"
   async defer></script>
 </body>
