modif espace client

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -68,7 +68,7 @@
                         <div class="help-block text-right"><a href="">Mot de passe oublié ?</a></div>
                       </div>
                       <div class="form-group">
-                        <button type="submit" class="btn btn-default btn-block">Se connecter</button>
+                        <button type="submit" class="btn btn-default btn-block"><a href="espace_client.html" class="disabled">Se connecter</a></button>
                       </div>
                       <div class="checkbox">
                         <label>
@@ -152,7 +152,7 @@
                 <!-- Password input-->
                 <div class="form-group">
                   <div class="col-md-10 col-md-offset-1">
-                    <input id="password" name="password" type="password" placeholder="Confirmez le mot de passe" class="form-control input-md" required="">
+                    <input id="password" name="password" type="password" placeholder="Confirmez le mdp" class="form-control input-md" required="">
                   </div>
                 </div>
 
