--- a/frontend/public/espace_client_test.html
+++ b/frontend/public/espace_client_test.html
@@ -7,12 +7,7 @@
   <link rel="icon" type="image/png" href="../imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="navbar.css" rel="stylesheet">
-  <link rel='stylesheet' href='http://fullcalendar.io/js/fullcalendar-2.2.3/fullcalendar.css' />
-  <script type="text/javascript" src="../javascript/calendar.js">
-
-  </script>
 </head>
 
 
@@ -42,21 +37,35 @@
   </nav>
 
   <div class="container-fluid" style="margin-top:100px;">
-      <div class="container">
-        <div class="col-lg-6">
-          <h1>Bonjour et bienvenue sur votre espace client !</h1>
-          <p class="lead">Cette page est encore en cours de construction <br>
+    <div class="container">
+      <div class="col-lg-12">
+        <h1>Bonjour et bienvenue sur votre espace client !</h1>
+        <p class="lead">Cette page est encore en cours de construction <br>
           Vous pouvez dès à présent rentrer vos disponibilités pour recevoir les colis de vos voisins sur le calendrier : </p>
         </div>
-        <div class="col-lg-6 well" id='calendar'></div>
+          <div class="col-lg-12" style="height:130px;">
+            <div style="overflow:hidden;">
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-md-8">
+                    <div id="datetimepicker12"></div>
+                  </div>
+                </div>
+              </div>
+              <script type="text/javascript">
+              $(function () {
+                $('#datetimepicker12').datetimepicker({
+                  inline: true,
+                  sideBySide: true
+                });
+              });
+              </script>
+            </div>
+
+        </div>
       </div>
-  </div>
 
 
-  <script src='http://fullcalendar.io/js/fullcalendar-2.2.3/lib/moment.min.js'></script>
-  <script src='http://fullcalendar.io/js/fullcalendar-2.2.3/fullcalendar.min.js'></script>
+    </body>
 
-
-</body>
-
-</html>
+    </html>
